Bug:  916168 Reviewer:  Self Comments:  Fixed handling of stack trace in KeyShield SSO configuration error on Safari.
Files:
M    gwt/src/org/kablink/teaming/gwt/client/util/GwtClientHelper.java
M    gwt/src/org/kablink/teaming/gwt/client/widgets/EditKeyShieldConfigDlg.java
M    gwt/src/org/kablink/teaming/gwt/public/GwtTeaming.css

--- a/ssf/gwt/src/org/kablink/teaming/gwt/public/GwtTeaming.css
+++ b/ssf/gwt/src/org/kablink/teaming/gwt/public/GwtTeaming.css
@@ -42,6 +42,8 @@
 .width1px   {width: 1px;}
 .width300px {width: 300px;}
 
+.maxWidth500 {max-width: 500px;}
+
 .whitespace-normal
 {
 	white-space: normal !important;
